fixed visibility issue on change font div

--- a/007/007.css
+++ b/007/007.css
@@ -16,7 +16,28 @@ button{
 .ChangeFont{
   visibility: hidden;
   margin-top: 5%;
+  display: inline-block;
+  border: 1px solid black;
+  width: 35%;
 }
+.ChangeColor{
+  visibility: hidden;
+  border: 4px solid red;
+  display: inline-block;
+  width: 25%;
+
+  /*margin-top: 5%;
+  /*position: relative;*/
+  /*top: 65%;*/
+  /*left: 50%;*/
+}
+/*.colorTypes{
+  width: 35%;
+  margin-top: 5%;
+  position: relative;
+  top: 60%;
+  left: 100%;
+}*/
 ul{
   list-style: none;
 }
@@ -47,22 +68,7 @@ ul{
   font-family: 'Cormorant Garamond', serif;
   font-size: 1.2em;
 }
-.ChangeColor{
-  /*visibility: hidden;*/
-  margin-top: 5%;
-  border: 4px solid red;
-  width: 35%;
-  /*position: relative;*/
-  /*top: 65%;*/
-  left: 50%;
-}
-.colorTypes{
-  width: 35%;
-  margin-top: 5%;
-  position: relative;
-  top: 60%;
-  left: 100%;
-}
+
 
 .scheme1{
   /*background-color: #C6C5B9;
